Jre8 (#19)
* Run iri with Java JRE 1.8

* Removed --add-modules parameter